Admin possibilities secured with Spring Security